--- a/src/main/filter/filter-prod.properties
+++ b/src/main/filter/filter-prod.properties
@@ -1,6 +1,6 @@
 
 resroot=
 
-jdbcUrl=jdbc:mysql://sqld.duapp.com:4050/MhEVjhlxOthVJtWSdyFJ
-user=OY8NywRjdMoU0x39vpQQa47k
-password=E9KGgkobhKd905UaxesVSpBTAyB8X864
+jdbcUrl=数据库链接
+user=数据库账号
+password=数据库密码
